<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WirelessDebug</string>
    <string name="hello_world">Hello world!</string>
    <string name="users_list">User list</string>
    <string name="action_settings">Settings</string>
    <string name="setNameHint">Input a name</string>
    <string name="setPasswordHint">Input a password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="send">Send</string>
    <string name="refresh">Refresh</string>
    <string name="modify">Modify</string>

</resources>